@@ -1,12 +1,30 @@
 {
-  "timestamp" : "2025-03-16T01:12:34Z",
-  "count_outdated" : 96,
-  "uniques_outdated" : 78,
-  "count" : 97,
-  "uniques" : 79,
+  "timestamp" : "2025-04-01T01:04:22Z",
+  "count_outdated" : 97,
+  "uniques_outdated" : 79,
+  "count" : 100,
+  "uniques" : 82,
   "clones" : [
     {
-      "timestamp": "2025-03-08T00:00:00Z",
+      "timestamp": "2025-03-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
