@@ -1,9 +1,19 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 3,
+  "uniques": 3,
   "clones": [
     {
-      "timestamp": "2025-03-08T00:00:00Z",
+      "timestamp": "2025-03-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-26T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-27T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
